feat(security): add basic JWT authentication for testing purposes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       database: todo_db
       auto-index-creation: true
   webflux:
-    base-path: /api
+    base-path: /api/v1
 
 server:
   port: 8080
