--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: to-do_List_backend
   data:
     mongodb:
-      uri: ${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017/todo_db}
+      uri: ${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017/franquicia_db}
       auto-index-creation: true
 
 
