--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,18 @@
 version: '3.8'
 
 services:
-  mongodb:
-    image: mongo:6
-    container_name: mongodb
-    restart: always
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo_data:/data/db
-    networks:
-      - backend
 
   accenturebackendtest:
     build:
       context: .
     container_name: accenturebackendtest
-    depends_on:
-      - mongodb
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATA_MONGODB_URI: mongodb://mongodb:27017/franquicia_db
+      - SPRING_DATA_MONGODB_URI=${MONGO_ATLAS_URI}
     networks:
-      - backend
-
-volumes:
-  mongo_data:
+      - backend-network
 
 networks:
-  backend:
+  backend-network:
+    driver: bridge
