--- a/docker-compose.localdb.yml
+++ b/docker-compose.localdb.yml
@@ -21,7 +21,8 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATA_MONGODB_URI: mongodb+srv://satabaresmo:YcjxybuN0bvUVHIm@cluster0.gvgk2wb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+        - SPRING_DATA_MONGODB_URI=mongodb://mongodb:27017/franquicia_db
+        - SPING_PROFILES_ACTIVE:localdb
     networks:
       - backend
 
